catalog: allow admins to edit pending proposals
